# TrackingRequest

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend_build.yml  deploy.yml  frontend_build.yml
backend/: .env-example  Dockerfile  app.db  config.py  database.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0e05515a2c69_create_tracking_requests_table.py  e34ad3495972_feat_ticket_model.py
backend/models/: tickets.py  tracking_request.py
backend/repo/: ticket_repo.py
backend/routers/: admin_routers.py  ticket_routers.py
backend/schemes/: tickets.py
backend/services/: ticket_services.py
backend/tests/: test_ticket_repo.py  test_ticket_router.py  test_ticket_service.py
backend/utils/: depend.py  enums.py  logging.py  uow.py
frontend/: .env-example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/app/: App.tsx
frontend/src/app/providers/: AuthProvider.tsx  QueryProvider.tsx  RouterProvider.tsx  index.tsx
frontend/src/app/routes/: routes.tsx
frontend/src/features/auth/api/: authApi.ts
frontend/src/features/auth/model/: useAuth.ts
frontend/src/features/auth/ui/: LoginForm.test.tsx  LoginForm.tsx
frontend/src/features/tickets/api/: ticketsApi.ts  types.ts
frontend/src/pages/login/: LoginPage.tsx
frontend/src/pages/tickets-list/: TicketsListPage.test.tsx  TicketsListPage.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/config/: enums.ts
frontend/src/shared/types/: common.ts
(+5 files in other folders)
